[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/enemies/orc_shaman/idle/orc_shaman_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/orc_shaman/idle/orc_shaman_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/orc_shaman/run/orc_shaman_run_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/orc_shaman/run/orc_shaman_run_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/orc_shaman/run/orc_shaman_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/orc_shaman/idle/orc_shaman_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/orc_shaman/idle/orc_shaman_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/orc_shaman/run/orc_shaman_run_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://scenes/interface/health_bar/health_bar_enemie.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/enemies/orc_shaman.gd" type="Script" id=10]
[ext_resource path="res://assets/interface/crosshair/target.png" type="Texture" id=11]
[ext_resource path="res://assets/effects/hit/3.png" type="Texture" id=12]
[ext_resource path="res://assets/effects/hit/0.png" type="Texture" id=13]
[ext_resource path="res://assets/effects/hit/5.png" type="Texture" id=14]
[ext_resource path="res://assets/effects/hit/4.png" type="Texture" id=15]
[ext_resource path="res://assets/effects/hit/6.png" type="Texture" id=16]
[ext_resource path="res://assets/effects/hit/2.png" type="Texture" id=17]
[ext_resource path="res://assets/effects/hit/1.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 36.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 2.0

[sub_resource type="Animation" id=3]
resource_name = "hitted"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.901961, 0, 0, 0.901961 ), Color( 1, 1, 1, 1 ), Color( 0.901961, 0, 0, 0.901961 ), Color( 1, 1, 1, 1 ) ]
}

[node name="OrcShaman" type="KinematicBody2D"]
position = Vector2( -2, -2 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 10 )

[node name="Aim" type="TextureRect" parent="."]
margin_left = -7.0
margin_top = -1.0
margin_right = 9.0
margin_bottom = 16.0
texture = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="HitAnimated" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = -7.0
margin_top = -9.0
margin_right = -7.0
margin_bottom = -9.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hitted = SubResource( 3 )

[connection signal="health_changed" from="." to="." method="_on_OrcShaman_health_changed"]
[connection signal="animation_finished" from="HitAnimated" to="." method="_on_HitAnimated_animation_finished"]
